--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "my-node-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js" 
+    "start": "node src/index.js",
+    "test": "echo \"No tests defined\" && exit 0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "config": "^3.3.12",
-    "express": "^4.21.1"
+    "express": "^4.17.1",
+    "config": "^3.3.6"
   }
 }
-
 
